# marketing-automation

./: .env.example  .env.mcp.example  .gitignore  ANALISE-SCRIPTS-MONITORING.md  ANALISE-TESTS-FOLDER.md  ATUALIZACAO-FINAL-ARQUIVOS.md  CHANGELOG.md  CONTRIBUTING.md  FASE-1-CORRECOES-COMPLETAS.md  GITHUB-ATUALIZADO.md  INTEGRATION-SUMMARY.md  QUICK-START.md  README.md  SETUP-DATABASE.md  START-HERE.md  env.template  mcp-config.json  👉-COMECE-AQUI.md  📊-RELATORIO-FINAL.md
.claude/: settings.local.json
.cursor/plans/: reorganizar-estrutura-projeto-be822876.plan.md
.github/workflows/: ci-integration.yml  docker-build.yml
Macspark/: CLAUDE.md  CURSOR_AGENTS_GUIDE.md  SECURITY_GUIDE.md
Macspark/.claude/: settings.local.json
Macspark/.cursor/: settings.json
Macspark/.github/: dependabot.yml
Macspark/Macspark-MCPs/mcp_orchestrator/: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
Macspark/Macspark-MCPs/mcp_orchestrator/.github/workflows/: ci.yml
Macspark/Macspark-MCPs/mcp_orchestrator/audit_env/: pyvenv.cfg
Macspark/Macspark-MCPs/mcp_orchestrator/config/: agents.yaml
Macspark/Macspark-MCPs/mcp_orchestrator/monitoring/: prometheus.yml
Macspark/Macspark-MCPs/mcp_orchestrator/monitoring/grafana/: dashboard.json
Macspark/Macspark-MCPs/mcp_orchestrator/scripts/: github_setup.sh  install.sh  prepare_github.ps1  prepare_github.sh
Macspark/Macspark-MCPs/mcp_orchestrator/src/mcp_orchestrator/: server.py
Macspark/Macspark-MCPs/mcp_orchestrator/src/mcp_orchestrator/config/: logging_config.py  settings.py
Macspark/Macspark-MCPs/mcp_orchestrator/src/mcp_orchestrator/utils/: error_handling.py  session_manager.py
Macspark/Macspark-MCPs/mcp_orchestrator/tests/unit/: test_server.py
Macspark/marketing-automation/: ACOES-RECOMENDADAS.md  CHANGELOG.md  DECISAO-MCP.md  DONE.md  FILES-CREATED.md  IMPLEMENTACAO-P0-COMPLETA.md  INDEX.md  MIGRATION-TOKEN-BLACKLIST.md  README.md  RELATORIO-CORRECOES-PENDENTES.md  RESUMO-FINAL.txt  ROADMAP.md  SESSAO-2025-10-19-COMPLETA.md  STATUS-FINAL-PROJETO.md  docker-compose.integrated.yml  relatorio_validacao_mcps.md  test_facebook.py  ✅-INTEGRAÇÃO-COMPLETA.md
Macspark/marketing-automation/shared/: pyproject.toml
Macspark/marketing-automation/shared/marketing_shared/config/: __init__.py
Macspark/marketing-automation/shared/marketing_shared/schemas/: __init__.py
Macspark/marketing-automation/shared/marketing_shared/utils/: __init__.py  facebook_client.py
analytics/: .gitignore  CHANGELOG-v3.0.1.md  GUIA-INSTALACAO-RAPIDA.md  INDICE-MESTRE.md  README.md  SQL-PARA-SUPABASE.sql  SUMARIO-SESSAO-DESENVOLVIMENTO.md  pyproject.toml  pytest.ini
analytics/.claude/: settings.local.json
analytics/archive/: Análise do Plano de Crescimento de Perfil da Sabri.md  IMPLEMENTACAO-v3.0-COMPLETA.md  RELATORIO-VALIDACAO-FINAL.md  RESULTADO-FINAL-SUPEROU-META.md  RESUMO-DADOS-E-ACOES.md  VALIDACAO-COMPLETA-v3.0.md  VALIDACAO-E-PROXIMOS-PASSOS.md
analytics/docs/: README.md  SETUP-APIS-SEGURO.md  screenshots-guide.md
analytics/n8n-workflows/: README.md  meta-ads-notion.json  meta-ads-supabase.json
analytics/notion-pages/: template-metricas-manuais.md
analytics/scripts/: README.md  check-supabase-structure.py  env.example.txt  meta-to-notion.py  requirements-dev.txt  requirements.txt  test-ga4-connection.py  test-slack-webhook.py  test-supabase-connection.py  validate-env.py  validate-env.sh
analytics/tests/: test_metrics_to_supabase.py.disabled
api/: 00-LEIA-PRIMEIRO-FINAL.md  CONCLUSAO-IMPLEMENTACAO.md  ESTRUTURA-SRC.txt  MIGRATION-EXCEPTIONS.md  P1-7-EXCEPTIONS-SUMMARY.md  PLANO-CORRECAO-COMPLETO.md  README-AUDITORIA.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt
api/docs/: GUIA-COMPLETO-TESTES-CICD.md  RUNBOOK.md
api/scripts/: restore.sh
backend/: .dockerignore  .env.db-update  .env.example  00-LEIA-PRIMEIRO-INTEGRACAO-N8N.md  CERTIFICACAO-TESTES-COMPLETOS.md  CONTRIBUTING.md  CORRECOES-FINAIS-COMPLETAS.md  INDICE-COMPLETO.md  README-GERAL.md  README.md  RELATORIO-FINAL-IMPLEMENTACAO.md  ROADMAP-MELHORIAS.md  SEGURANCA-AVANCADA.md  START-HERE.md  STATUS-PROJETO.md  STATUS-VALIDACAO-FINAL.md  VALIDACAO-TECNICA.md  arquivos-python-criados.txt  ci-cd.yml  init-db.sql  locustfile.py  migrations.sql
backend/docs/: CREDENCIAIS-TEMPORARIAS.md  MCP-INTEGRATION.md  SETUP-N8N-MACSPARK.md
backend/scripts/: health_check.py  refactor_exceptions.py  security_validation.py  test_facebook_connection.py  test_imports.py  test_security_advanced.py  validate_p0.sh
docs/: INDEX.md  MCP-DOCUMENTATION-GUIDE.md  PRD-INTEGRATION.md  USER-GUIDE.md  VALIDATION-REPORT.md
docs/architecture/: ADR-CONSOLIDATED.md  ARCHITECTURE.md  DEPENDENCIES.md
docs/archive/: ANALISE-TECNICA-APROFUNDADA-2025-10-20.md  ANALISE-TECNICA-COMPLETA.md  AUDITORIA-ESTRUTURA-DOCS.md  MIGRATION-AGENT-CACHE.md  MIGRATION.md  RELEASE_NOTES_v1.1.0.md  REORGANIZACAO-ESTRUTURA-2025-10-20.md  VALIDACAO-IMPLEMENTACAO.md  VALIDATION-CHECKLIST.md
docs/decisions/: ACOES-RECOMENDADAS.md  DECISAO-MCP.md  ROADMAP.md
frontend/: README.md
infrastructure/: README.md
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
scripts/: README.md  create-github-issues.py  health-check.ps1  setup-mcps.sh  setup-production.sh
shared/: README.md
tests/: README.md
(+246 files in other folders)
