[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing-shared"
version = "1.0.0"
description = "Shared schemas and utilities for Marketing Automation Platform"
authors = [
    {name = "Marco", email = "marco@macspark.dev"}
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "urllib3>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "mypy>=1.5.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["marketing_shared*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

